--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -24,10 +24,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |pytest
-        python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
         python -m pip install numpy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
    
     - name: Run AntSystem
       run: python -c "import sys; print(sys.path)"
+
