--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -25,10 +25,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-	python -m pip install --upgrade pip
+        python -m pip install --upgrade pip
         python -m pip install numpy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
    
     - name: Run AntSystem
-      run: python -c "import sys; print(sys.path)"
+      run: |
+        python3 main.py
 
