--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -12,6 +12,45 @@ on:
 jobs:
   build:
 
+    runs-on: ubuntu# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
+name: Python package
+
+on:
+  push:
+    branches: [ devel ]
+  pull_request:
+    branches: [ devel ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.5]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Instal# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
+name: Python package
+
+on:
+  push:
+    branches: [ devel ]
+  pull_request:
+    branches: [ devel ]
+
+jobs:
+  build:
+
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -32,4 +71,35 @@ jobs:
     - name: Run AntSystem
       run: |
         python3 main.py
+
+l dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install numpy
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+   
+    - name: Run AntSystem
+      run: |
+        python3 main.py
+
+-latest
+    strategy:
+      matrix:
+        python-version: [3.5]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install numpy
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+   
+    - name: Run AntSystem
+      run: |
+        python -c "import sys; print(sys.version)"
 
