--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -31,7 +31,7 @@ jobs:
    
     - name: Run AntSystem
       run: |
-        python -c "import sys; print(sys.path)"
+        python AntSystem/main.py
 
 
 
